tests/NormalTests/paczka1/fuzzy1/81302413.err
Error in line 22: SyZn7om A7 30,5
Error in line 27: SyZn7om A484 28,2
